Fix button text align

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -5,6 +5,7 @@
   @extend %label;
   box-sizing: border-box;
   text-decoration: none;
+  text-align: center;
   user-select: none;
   cursor: pointer;
   border: none;
